fixed footer vertical position on tablet size screens

--- a/less/layout-mobile.less
+++ b/less/layout-mobile.less
@@ -76,7 +76,7 @@
 	}
 	#media {
 		position: relative;
-		height: 1150px;
+		height: 1535px;
 
 		// social links
 		img#like-facebook {
